[package]
name = "wasm_mutex"
version = "0.1.5"
authors = ["Nicholas Comendant <nicholas.comendant@gmail.com>"]
edition = "2021"
description = "A mutex used for single-threaded WebAssembly applications"
repository = "https://github.com/ncomendant/wasm_mutex"
readme = "README.md"
license = "MIT"
categories = [
  "wasm",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0" }